--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-1. fix display for files that are larger than terminal window
-2. copy/paste
-3. find/replace
-4. home,end,delete keys
+1. copy/paste
+2. find/replace
+3. home,end,delete keys
+4. config files
